--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -3,9 +3,10 @@
 <head>
   <title>eShop</title>
   <link rel="stylesheet" href="">
-  <script src="main.js" defer></script>
+  
 </head>
 <body>
-  
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8"></script>
+  <script src="main.js"></script>
 </body>
 </html>
